fix: 区分打印真实设备并补齐流转卡时间